# PayMo

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  paymo.toml  wrapper.h
.github/workflows/: ci.yml
.paymo/: README.md
examples/: client.rs  fork.rs  process.rs  prot.rs  serai.rs  server.rs
proto/: example.proto  paymo.proto
src/: bus.rs  config.rs  error.rs  lib.rs  msgs.rs  opts.rs
src/cli/: clap_validators.rs  clap_value_parsers.rs  client.rs  error.rs  mod.rs  opts.rs
src/core/: channel.rs  lhtlp.rs  mod.rs  utils.rs  vtdlog.rs
src/paymod/: mod.rs
src/peerd/: mod.rs
src/protos/: example.proto
src/walletd/: mod.rs
tests/: README.md
