[package]
name = "paymo"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/NothingToHide-SeniorProject/PayMo"
repository = "https://github.com/NothingToHide-SeniorProject/PayMo"
readme = "README.md"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base58-monero = "1.0.0"
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
clap_complete = "4.1.2"
colored = "2.0.0"
config = "0.13.3"
curve25519-dalek = "3.2.1"
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
fixed-hash = "0.8.0"
hex = "0.4.3"
hex-literal = "0.3.4"
log = "0.4.17"
monero = { version = "0.18.2", features = ["serde"] }
monero-rpc = "0.3.2"
prost = "0.11.6"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
sysinfo = "0.28.0"
thiserror = "1.0.38"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = "1.25.0"
toml = "0.7.2"
uuid = "1.3.0"
x25519-dalek = "1.2.0"
zmq = "0.10.0"

[build-dependencies]
prost-build = "0.11.6"
