[package]
name = "paymo"
version = "0.1.0"
default-run = "cli"
edition = "2021"
homepage = "https://github.com/NothingToHide-SeniorProject/PayMo"
readme = "README.md"
repository = "https://github.com/NothingToHide-SeniorProject/PayMo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58-monero = "1.0.0"
clap = { version = "4.1.6", features = ["derive"] }
clap_complete = "4.1.2"
colored = "2.0.0"
config = "0.13.3"
cty = "0.2.2"
curve25519-dalek = "3.2"
hex = "0.4.3"
hex-literal = "0.3.4"
log = "0.4.17"
monero = "0.18.2"
monero-rpc = "0.3.2"
monero-serai = { git = "https://github.com/LeoNero/serai", branch = "develop" }
pretty_env_logger = "0.4.0"
prost = "0.11.6"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.152", features = ["derive"] }
sha3 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
zeroize = "1.6.0"
zmq = "0.10.0"

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
prost-build = "0.11.6"

[dev-dependencies]
num-bigint = "0.4.3"
